[gd_scene load_steps=14 format=2]

[ext_resource path="res://Maze.gd" type="Script" id=1]
[ext_resource path="res://TileMap.gd" type="Script" id=2]
[ext_resource path="res://art/treasure1.png" type="Texture" id=3]
[ext_resource path="res://art/treasure2.png" type="Texture" id=4]
[ext_resource path="res://art/treasure3.png" type="Texture" id=5]
[ext_resource path="res://PlayerKini.tscn" type="PackedScene" id=6]
[ext_resource path="res://TreasuresMap.gd" type="Script" id=7]
[ext_resource path="res://Treasures.tscn" type="PackedScene" id=8]
[ext_resource path="res://Maze.tres" type="TileSet" id=18]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 48.6071, 49.9467, 0.381836, 49.9467, 0.381836, 0.381836, 48.6071, 0.381836 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 53.2957, 54.291, 0.381836, 54.291, 0.381836, 0.372437, 53.2957, 0.372437 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 57.3145, 56, 0.381836, 56, 0.381836, 0.0328522, 57.3145, 0.0328522 )

[sub_resource type="TileSet" id=1]
0/name = "treasure1.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 49, 50 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "treasure2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, -2, 54, 55 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "treasure3.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, -3, 58, 56 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="Maze" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 18 )
show_collision = true
format = 1
script = ExtResource( 2 )

[node name="TreasuresMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 1 )
format = 1
script = ExtResource( 7 )

[node name="PlayerKini" parent="." instance=ExtResource( 6 )]

[node name="Treasures" parent="." instance=ExtResource( 8 )]

[connection signal="signal_rotate_cell" from="TileMap" to="." method="_on_TileMap_signal_rotate_cell"]
[connection signal="hit" from="PlayerKini" to="TreasuresMap" method="_on_PlayerKini_hit"]
